fix: update mergify + remove horizontal scrollbars (#33)
* update mergify + remove horizontal scrollbars

* update mergify

* revert button width

* make navbar fixed bottom on desktop

* fix scroll behavior for desktop

* revert fixed footer

--- a/styles/Page.module.scss
+++ b/styles/Page.module.scss
@@ -1,7 +1,14 @@
 @import 'variables';
 
+#main {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 #layout {
-  width: 100vw;
+  width: 100%;
   max-width: $max-width;
   display: flex;
   justify-content: center;
